--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-mail:2.3.0.RELEASE')
+    compile('com.google.code.gson:gson:2.8.2')
 //    compile('org.postgresql:postgresql')
     annotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
