--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,17 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-mail:2.3.0.RELEASE')
+
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+
     compile('com.google.code.gson:gson:2.8.2')
 //    compile('org.postgresql:postgresql')
-    annotationProcessor('org.projectlombok:lombok')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+
     compile('io.springfox:springfox-swagger2:2.7.0')
     compile('io.springfox:springfox-swagger-ui:2.7.0')
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    annotationProcessor('org.projectlombok:lombok')
 //    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
 
