--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=kodilla
 spring.datasource.password=your_password
 
@@ -26,3 +26,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
 admin.mail=tranquil.eyrie@gmail.com
+
+#ENDPOINT CONFIGURATION
+management.endpoints.web.exposure.include=*
