--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=Jakub
 admin.mail=tranquil.eyrie@gmail.com
 
 #ENDPOINT CONFIGURATION
@@ -41,5 +42,5 @@ info.app.administrator.address.street=Cowley Road
 info.app.administrator.adress.number=597
 info.company.name=TaskCrudAppCrew
 info.company.goal=Our goal is to produce better software
-info.company.email=info.tcac.com
+info.company.email=info@tcac.com
 info.company.phone=+48990489562
